styles/components/blocks/autofunction.scss
.autofunction {
  margin-top: 1.5em;

  .code-header {
    h3 {
      margin-bottom: 0.5em;
    }

    margin-bottom: 1.5em;

    .title-with-select {
      display: flex;
      flex-direction: row;
      margin-top: 1.25em;
      font-size: 2.25em;
      align-items: center;
      margin-bottom: 0.5em;

      @media (max-width: 1024px) {
        flex-direction: column;
        align-items: flex-start;
      }

      .version-select {
        margin-left: auto;
        position: relative;

        @media (max-width: 1024px) {
          margin-left: 0;
        }

        &.old-version select {
          color: $red-70;
        }

        select {
          appearance: none;
          background-color: transparent;
          border: none;
          padding: 0;
          margin: 0;
          width: 100%;
          font-family: inherit;
          font-size: 0.5em;
          cursor: inherit;
          line-height: inherit;
          text-align: right;
          padding-right: 22px;
          font-weight: bold;
          font-family: $source;
        }

        &:after {
          content: "";
          display: block;
          position: absolute;
          right: 0;
          bottom: 25%;
          width: 11px;
          height: 7px;
          opacity: 0.7;
          background-image: url("data:image/svg+xml,%0A%3Csvg width='11px' height='8px' viewBox='0 0 11 8' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='select_arrow_down_disabled' fill='%23000000' fill-rule='nonzero'%3E%3Cpath d='M10.8703474,1.8762017 L5.80707196,6.93171246 C5.72063689,7.01813145 5.61827957,7.06134094 5.5,7.06134094 C5.38172043,7.06134094 5.27936311,7.01813145 5.19292804,6.93171246 L0.129652605,1.8762017 C0.0432175352,1.78978271 0,1.68630735 0,1.5657756 C0,1.44524385 0.0432175352,1.34176849 0.129652605,1.2553495 L1.26240695,0.129628481 C1.34884202,0.0432094937 1.45119934,0 1.56947891,0 C1.68775848,0 1.7901158,0.0432094937 1.87655087,0.129628481 L5.5,3.7524034 L9.12344913,0.129628481 C9.2098842,0.0432094937 9.31224152,0 9.43052109,0 C9.54880066,0 9.65115798,0.0432094937 9.73759305,0.129628481 L10.8703474,1.2553495 C10.9567825,1.34176849 11,1.44524385 11,1.5657756 C11,1.68630735 10.9567825,1.78978271 10.8703474,1.8762017 Z' id='Path'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
          pointer-events: none;
        }
      }

      h2 {
        margin: 0;
        font-size: 1em;
      }
    }
  }

  table td,
  .footer {
    &.has-example {
      width: 100%;
      overflow: auto;
    }

    blockquote {
      margin: 0;
      padding: 0;
      display: inline-block;
      width: 100%;
      max-width: 100%;
      iframe {
        width: calc(100% - 2px) !important;
        border: 1px solid $gray-40 !important;
        border-radius: 5px;
      }
    }

    pre.line-numbers {
      margin: 0;

      .table {
        display: inline;
      }
    }

    p {
      margin-bottom: 1em;
    }

    .block-code {
      margin-top: 0;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }

  .version-list {
    list-style: none;
    font-family: $source;
    line-height: 1;
    margin: 0;
    padding: 0;

    li {
      display: inline;
      font-family: $source;
      line-height: 1.5;

      &:not(:last-child):after {
        content: ", ";
      }
    }
  }
}

